styles/style.css
/* ... */
.summary-menu__li--ch7-item6 {
    width: 44.2%;
    top: 8%;
    left: 4.5%;
}

.summary-menu__li--ch8-item1 {
    width: 44.75%;
    top: 17%;
    left: 50%;
}

.summary-menu__li--ch8-item2 {
    width: 7.35%;
    top: 33.75%;
    left: 77%;
}

.summary-menu__li--ch8-item3 {
    width: 44.5%;
    top: 65.9%;
    left: 50.07%;
}

.summary-menu__li--ch8-item4 {
    width: 27.6%;
    top: 65.75%;
    left: 22.5%;
}

.summary-menu__li--ch8-item5 {
    width: 9.6%;
    top: 34.1%;
    left: 13.5%;
}

.summary-menu__li--ch8-item6 {
    width: 27.8%;
    top: 16.5%;
    left: 22.5%;
}

.summary-menu__li--ch9-item1 {
    width: 28%;
    top: 13.75%;
    left: 51.85%;
}

.summary-menu__li--ch9-item2 {
    width: 34.75%;
    top: 33.5%;
    left: 51.75%;
}

.summary-menu__li--ch9-item3 {
    width: 41.7%;
    top: 13.25%;
    left: 6.25%;
}

.summary-menu__li--ch10-item1 {
    width: 40.5%;
    top: 9.5%;
    left: 51.95%;
}

.summary-menu__li--ch10-item2 {
    width: 19.45%;
    top: 36.1%;
    left: 76.8%;
}

.summary-menu__li--ch10-item3 {
    width: 24.65%;
    top: 66%;
    left: 51.45%;
}

.summary-menu__li--ch10-item4 {
    width: 24.25%;
    top: 64.75%;
    left: 24.1%;
}

.summary-menu__li--ch10-item5 {
    width: 14.6%;
    top: 36.25%;
    left: 11.7%;
}

.summary-menu__li--ch10-item6 {
    width: 24%;
    top: 16.35%;
    left: 24.5%;
}

@media (min-width:900px) {
    .summary-menu--nontext-section {
        width: 100%;
    }

    .summary-menu__li {
        position: absolute;
        box-sizing: border-box;
        outline: revert;
    }
}

/* mobile-controls */
.mobile-controls {
    position: fixed;
    left: 0;
    bottom: 0;
    box-sizing: border-box;
    height: 56px;
    width: 100%;
    padding: 8px 16px;
    display: flex;
    align-items: center;
    background: #505050;
}

@media (orientation: landscape) {
    .mobile-controls--section-text {
        position: relative;
    }
}

.mobile-controls--hidden {
    display: none;
}

.mobile-controls__nav {
    width: 15px;
    fill: #c2c2c2;
}

.mobile-controls__nav--prev {
    margin-right: auto;
}

.mobile-controls__nav--next {
    margin-left: auto;
}

.mobile-controls__nav svg {
    vertical-align: middle;
}

.mobile-controls__btn {
    width: 35px;
    margin: auto;
    padding: 0;
    border: none;
    background: none;
    fill: #c2c2c2;
}

.mobile-controls__btn--selected {
    fill: #fff;
}

.mobile-controls__btn svg {
    vertical-align: middle;
}

@media (min-width:900px) {
    .mobile-controls {
        display: none;
    }
}

.narration-player {
    flex: 0 0 auto;
    box-sizing: border-box;
    margin-right: 4.5rem;
    height: 2.5em;
    max-width: 25em;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-left: 0.5em;
    visibility: inherit;
    transition: height 0.75s;
}

.narration-player--hidden {
    height: 0px;
    visibility: hidden;
    overflow: hidden;
    transition: height 0.75s, visibility 0s ease 0.75s;
}

.narration-player__playback-btn {
    flex: 0 0 auto;
    box-sizing: border-box;
    width: 2.5em;
    height: 2.5em;
    border-radius: 100px;
    border: none;
    padding: 0.75em;
    background: none;
    transition: box-shadow 0.25s;
}

@media (min-width:900px) {
    .narration-player__playback-btn:hover {
        box-shadow: 0px 0px 0 2px #fff;
    }
}

.narration-player__playback-btn-icon {
    width: 100%;
    height: 100%;
    stroke-width: 2;
    fill: none;
}

.narration-player__playback-btn-icon--section-text {
    stroke: #fff;
}

.narration-player__playback-btn-icon--modal {
    stroke: #000;
}

.narration-player__playback-btn-icon--hidden {
    display: none;
}

.narration-player__seekbar {
    flex: 1;
    min-width: 0;
    margin: 0 1em;
    -webkit-appearance: none;
    width: 15.5em;
    height: 2px;
    font-size: 0.85em;
    cursor: pointer;
}

.narration-player__seekbar--section-text {
    background: #fff;
}

.narration-player__seekbar--modal {
    background: #000;
}

.narration-player__seekbar::-webkit-slider-thumb {
    -webkit-appearance: none;
    width: 0.85em;
    height: 0.85em;
    border-radius: 100px;
}

.narration-player__seekbar--section-text::-webkit-slider-thumb {
    background: #fff;
}

.narration-player__seekbar--modal::-webkit-slider-thumb {
    background: #000;
}

.narration-player__time-display {
    flex: 0 0 auto
}

/* progress-bar */
.progress-bar {
    position: relative;
    width: 100%;
    z-index: 1;
    visibility: inherit;
    transition: transform 0.25s;
}

.progress-bar--shelved {
    transform: translateY(400%);
    visibility: hidden;
    transition: transform 0.25s, visibility 0s ease 0.25s;
}

.progress-bar__progress-bar-container {
    position: relative;
    width: 100%;
    overflow: hidden;
}

.progress-bar__progress-el {
    -webkit-appearance: none;
    width: 100%;
    height: 5px;
    display: block;
}

.progress-bar__progress-el::-webkit-progress-bar {
    border: 1px solid #ccc;
    border-left: none;
    border-right: none;

}

.progress-bar__progress-el::-webkit-progress-value {
    background-color: #fff;
}

.progress-bar__chapter-indicator {
    position: absolute;
    top: 0;
    box-sizing: border-box;
    width: 3px;
    height: 100%;
    border: 1px solid #000;
    border-top: none;
    border-bottom: none;
    background-color: #fff;
    box-shadow: 0 0 10px 1px #000;
}

.progress-bar__current-position-indicator {
    position: absolute;
    top: -11px;
    transform: translateX(-50%);
    width: 0.7em;
    height: 0.7em;
    filter: drop-shadow(0px 0px 3px #000);
    fill: #ccc;
}

.progress-bar__current-position-indicator svg {
    display: block;
}
/* ... */

